# jetto-mobo

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  .readthedocs.yaml  README.md  jetto_mobo.hdf5  requirements-dev.txt  requirements.txt  setup.cfg
docs/: cost_functions.ipynb  ecrh.ipynb  genetic_algorithm.ipynb  mobo.ipynb  nearest_neighbour.ipynb  optimisation_comparison.ipynb  optimisation_comparison.py  requirements.txt  visualisation.ipynb
ecrh/: ecrh.py  objective.py
hpc_job_scripts/: piecewise_linear.sbatch.csd3.ampere  piecewise_linear.sbatch.csd3.cclake  piecewise_linear.sbatch.csd3.icelake  piecewise_linear_2.sbatch.csd3.cclake  piecewise_linear_3.sbatch.cclake  sbatch.csd3.ampere  sbatch.csd3.icelake  sigmoid_spline.sbatch.csd3.cclake  sum_of_gaussians.sbatch.csd3.ampere  sum_of_gaussians.sbatch.csd3.cclake  sum_of_gaussians_2.sbatch.cclake
src/: setup.cfg
src/jetto_ballooning/: ballooning_stability.py
src/jetto_mobo/: acquisition.py  botorch_test.py  configuration.py  ecrh.py  evaluation.py  genetic_algorithm.py  inputs.py  jetto_container.py  jetto_singularity.py  jetto_subprocess.py  jetto_test.py  main.py  main_transfer.py  models.py  objective.py  objectives.py  plot.py  save_model.py  simulation.py  surrogate.py  utils.py
src/jetto_mobo/inputs/: ecrh.py
src/jetto_mobo/objectives/: q.py
src/jetto_mobo/scripts/: ecrh_q_optimisation.py
src/jetto_mobo/scripts/ecrh_q_optimisation/: ecrh_inputs.py  main.py  q_objectives.py
src/old/: ecrh.py  genetic_algorithm.py  main.py  objective.py  plot.py
src/tests/: test_surrogate.py
(+155 files in other folders)
