[metadata]
name = jetto_mobo
version = 0.1.0

[options]
packages = jetto_mobo
python_requires = >=3.8
install_requires =
    botorch
    jetto_tools
    netCDF4
    numpy
    h5py
    scipy

[options.extras_require]
dev =
    black
    build
    flake8
    isort
    kaleido
    numpydoc
    mypy
    plotly
    pre-commit
    pydata_sphinx_theme
    pytest
    sphinx
    sphinx_autobuild
    twine
