[metadata]
name = jetto_mobo
version = 0.0.1

[options]
packages = jetto_mobo
python_requires = >=3.7
install_requires =
    botorch
    jetto_tools
    netCDF4
    numpy
    h5py
    scipy

[options.extras_require]
dev = 
    black
    flake8
    isort
    kaleido
    numpydoc
    plotly
    pydata_sphinx_theme
    pytest
    sphinx
    sphinx_autobuild